update header scss

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
                 <ul class="site-nav__wrap">
                     <li><a href="./restaurant.html" class="site-nav__link link">Ресторан</a></li>
                     <li><ul class="site-nav__contact-wrap">
-                        <li><a href="#" class="link">
+                        <li><a href="#" class="site-nav__icon-link link">
                             <svg class="site-nav__icon" width="24" height="24">
                                 <use href="./images/sprite.svg#icon-phone"></use>
                             </svg>
@@ -21,7 +21,7 @@
                 <ul class="site-nav__wrap">
                     <li><a href="./hotel.html" class="site-nav__link link">Готель</a></li>
                     <li><ul class="site-nav__contact-wrap">
-                        <li><a href="#"class="link">
+                        <li><a href="#"class="site-nav__icon-link link">
                             <svg class="site-nav__icon" width="24" height="24">
                                 <use href="./images/sprite.svg#icon-phone"></use>
                             </svg>
