--- a/src/sass/layout/header.scss
+++ b/src/sass/layout/header.scss
@@ -14,6 +14,7 @@
 .header-wrap {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .header-logo {
@@ -34,26 +35,28 @@
     }
 }
 
-.site-nav {
-   
-}
+
 .site-nav__list {
     display: flex;
-    // gap: 26px;
+    gap: 15px;
 
+    @include mobile { gap: 26px;}
+    
     @include tablet {
         gap: 72px;
     }
 }
 
-.site-nav__item {
-    
-}
 
 .site-nav__wrap {
     display: flex;
     align-items: center;
-    gap: 12px;
+    gap: 6px;
+
+    @include mobile {
+        gap: 12px;
+    }
+    
 
     @include tablet {
         gap: 32px;
@@ -61,12 +64,22 @@
     
 }
 .site-nav__link {
+
     font-weight: 500;
-    font-size: 16px;
-    line-height: 1.25;
     letter-spacing: 0.02em;
     color: $colorAccentYellow;
+    font-size: 13px;
+    line-height: 1.2;
+    padding-top: 24px;
+    padding-bottom: 15px;
 
+    transition: color $transDuration $cubic;
+
+    @include mobile {
+        font-size: 16px;
+        line-height: 1.25;
+    }
+    
     @include tablet {
         font-size: 20px;
         line-height: 1.2;
@@ -74,18 +87,24 @@
     }
 }
 
+.site-nav__link:hover,
+.site-nav__link:focus {
+    color: $colorLogoWhite;
+}
+
 .site-nav__contact-wrap {
     display: flex;
     align-items: center;
-    gap: 15px;
+    
     
     @include tablet {
+        gap: 15px;
         padding: 10px 8px 10px 14px;
         border: 1px solid rgba(243, 198, 83, 0.7);
         border-radius: 2px;
-    }
-}
 
+        }
+}
 
 
 .site-nav__contact {
@@ -97,13 +116,35 @@
         font-size: 14px;
         line-height: 1.21;
         letter-spacing: 0.02em;
-        color: $colorLogoWhite;}
 
+        color: $colorLogoWhite;
     
+        transition: color $transDuration $cubic;
+    }
+
+    }
+
+.site-nav__contact:hover,
+.site-nav__contact:focus {
+    color: $colorAccentYellow;
+
+   
 }
 
+.site-nav__icon-link {
+    color: $colorAccentYellow;
+
+    transition: color $transDuration $cubic;
+}
+
+.site-nav__icon-link:hover,
+.site-nav__icon-link:focus {
+    color: $colorLogoWhite;
+} 
+
 .site-nav__icon {
-    fill: $colorAccentYellow;
+    display: block;
+    fill: currentColor;
     width: 12px;
     height: 20px;
 }
@@ -118,11 +159,17 @@ display: none;
 }
 }
 
-.soc__item {
-}
 .soc__link {
-    display: block;
+    color: rgba(243, 198, 83, 0.7);
+
+    transition: color $transDuration $cubic;
+}
+
+.soc__link:hover,
+.soc__link:focus {
+    color: $colorLogoWhite;
 }
 .soc__icon {
-    fill: rgba(243, 198, 83, 0.7);
+    display: block;
+    fill: currentColor;
 }
