--- a/src/sass/layout/footer.scss
+++ b/src/sass/layout/footer.scss
@@ -84,7 +84,7 @@ gap: 20px;
     }
 }
 .icon-social__thumb{
-    // display: flex;
+    display: flex;
     @include tablet {
         padding-right: 12px;
     }
