--- a/src/partials/pages/restaurant/menu.html
+++ b/src/partials/pages/restaurant/menu.html
@@ -5,7 +5,9 @@
     <table class="menu__table">
       <tbody class="menu__data">
         <tr>
-          <th class="menu__subtitle" colspan="3">Гарячі страви</th>
+          <th class="menu__subtitle menu__subtitle--not-pt" colspan="3">
+            Гарячі страви
+          </th>
         </tr>
         <tr>
           <td>
@@ -113,7 +115,9 @@
 
       <tbody class="menu__data">
         <tr>
-          <th class="menu__subtitle" colspan="3">Салати</th>
+          <th class="menu__subtitle menu__subtitle--not-pt" colspan="3">
+            Салати
+          </th>
         </tr>
         <tr>
           <td>
@@ -226,8 +230,8 @@
       </tbody>
     </table>
 
-    <button class="menu__button button" type="button">
-      Забронювати столик
-    </button>
+    <div class="menu__wrap">
+      <button class="menu__button btn" type="button">Забронювати столик</button>
+    </div>
   </div>
 </section>
