--- a/src/partials/pages/hotel/room-for-3.html
+++ b/src/partials/pages/hotel/room-for-3.html
@@ -2,7 +2,9 @@
   <div class="room-for-3__container container">
     <div class="room-for-3__wrap">
       <p class="room-for-3__pre-title">Amet minim mollit non</p>
-      <span class="room-for-3__logo logo">MIMIHO</span>
+      <div class="room-for-3-logo__wrap">
+        <span class="room-for-3__logo logo">MIMIHO</span>
+      </div>
       <h2 class="room-for-3__title hotel-title">ТРЬОХМІСНИЙ НОМЕР</h2>
       <p class="room-for-3__after-title">
         Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
