--- a/src/sass/pages/hotel/_room-for-3.scss
+++ b/src/sass/pages/hotel/_room-for-3.scss
@@ -15,8 +15,17 @@
   color: $colorTextHotel;
 }
 
-.room-for-3__logo {
+.room-for-3-logo__wrap {
+  display: table;
+  margin-left: auto;
   margin-bottom: 32px;
+}
+
+.room-for-3__logo {
+  text-align: right;
+  letter-spacing: 0.3em;
+  margin-right: -0.3em;
+
   color: $colorLogoGray;
 }
 
@@ -46,6 +55,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 16px;
 }
 
 .room-for-3__details {
