add tablet vers.

--- a/src/partials/pages/hotel/room-for-3.html
+++ b/src/partials/pages/hotel/room-for-3.html
@@ -44,8 +44,10 @@
           />
         </picture>
       </li>
+    </ul>
+    <div class="room-for-3-tablet__wrap">
       <div class="room-for-3-image__wrap">
-        <li class="room-for-3__others-room">
+        <div class="room-for-3-image__others-room">
           <picture>
             <source
               srcset="
@@ -75,8 +77,8 @@
               height="194"
             />
           </picture>
-        </li>
-        <li class="room-for-3__others-room">
+        </div>
+        <div class="room-for-3-image__others-room">
           <picture>
             <source
               srcset="
@@ -106,14 +108,16 @@
               height="194"
             />
           </picture>
-        </li>
+        </div>
       </div>
-    </ul>
-    <div class="room-for-3-btn__wrap">
-      <a href="./room-for-3.html" class="room-for-3__details btn">Детальніше</a>
-      <button type="button" class="room-for-3__btn-price btn">
-        Переглянути ціни
-      </button>
+      <div class="room-for-3-btn__wrap">
+        <a href="./room-for-3.html" class="room-for-3__details btn"
+          >Детальніше</a
+        >
+        <button type="button" class="room-for-3__btn-price btn" data-modal-open>
+          Переглянути ціни
+        </button>
+      </div>
     </div>
   </div>
 </section>
