--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -29,10 +29,9 @@
 
                 </li>
             </ul>
-            <iframe
+            <iframe class="contacts__googlemap"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113881.91630131582!2d34.48719366657029!3d49.601959930067196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d825e425e6ba6b%3A0xcf3e6bdfb9e4ca82!2sPoltava%2C%20Poltava%20Oblast%2C%2036000!5e1!3m2!1sen!2sua!4v1670619352258!5m2!1sen!2sua"
-                width="384" height="220" style="border: 0" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
+                style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </address>
     </div>
