--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -20,6 +20,11 @@
     align-items: center;
     gap: 22px;
     margin-bottom: 16px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    @include mobile {
+    justify-content: flex-start;
+    }
 }
 
 .contacts__link {
@@ -38,9 +43,10 @@
     height: 40px;
     padding-left: 14px;
 }
-
+@include mobile {
 .contacts__phone--twin{
     width: 260px;
+}
 }
 
 .phone__icon {
@@ -54,13 +60,19 @@
 }
 
 .contacts__hotel-phone {
+display: none;
     @include font(400, 14px, 1.2, 0.02em);
     color: $colorTextAddressMobTab;
+    @include mobile {
     display: flex;
-    align-items: center;
+    align-items: center
+    }
 }
 .contacts__phone--first {
-margin-right: 12px;
+ @include mobile {   
+margin-right: 12px;}
+display: flex;
+align-items: center
 }
 
 .contacts__list {
@@ -68,7 +80,11 @@ margin-right: 12px;
 }
 
 .contacts__map{
+    display: flex;
+    justify-content: center;
+    @include mobile {
     margin-left: 124px;
+    }
 }
 
 .contacts__phone--map {
@@ -87,4 +103,22 @@ margin-right: 12px;
 .map__text {
     width: 183px;
     height: 61px;
+}
+
+
+.contacts__googlemap{ 
+    width: 290px;
+    height: 220px;
+    display: block;
+    margin: 0 auto;
+@include mobile {
+width: 384px;
+}
+@include tablet {
+width: 535px;
+    height: 412px;
+}
+@include desktop {
+width: 634px;
+}
 }
