--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -2,28 +2,29 @@
     <div class="container contacts__container">
         <h2 class="contacts__title visually-hidden">Наші контакти</h2>
         <div class="contacts__wraper">
-            <span class="logo contacts__logo" href="./">MIMIHO</span>
+            <span class="logo contacts__logo color-adress--desktop" href="./">MIMIHO</span>
             <p class="contacts__text">Ресторанно-готельний комплекс</p>
             <address class="contacts__address">
                 <ul class="contacts__list">
                     <li class="contacts__item">
-                        <a class="contacts__link" href="./restaurant.html">Ресторан</a><a class="contacts__phone"
-                            href="tel:+380955559533"><svg class="phone__icon" width="12" height="20">
+                        <a class="contacts__link" href="./restaurant.html">Ресторан</a><a
+                            class="contacts__phone color-adress--desktop" href="tel:+380955559533"><svg
+                                class="phone__icon" width="12" height="20">
                                 <use href="./images/sprite.svg#icon-phone"></use>
                             </svg>095 555 95 33</a>
                     </li>
                     <li class="contacts__item contacts__item--hotel">
                         <a class="contacts__link" href="./hotel.html">Готель</a>
                         <div class="contacts__phone contacts__phone--twin">
-                            <a class="contacts__hotel-phone contacts__phone--first" href="tel:+380668491089"><svg
-                                    class="phone__icon" width="12" height="20">
+                            <a class="contacts__hotel-phone contacts__phone--first color-adress--desktop"
+                                href="tel:+380668491089"><svg class="phone__icon" width="12" height="20">
                                     <use href="./images/sprite.svg#icon-phone"></use>
-
                                 </svg>066 849 10 89</a>
-                            <a class="contacts__hotel-phone" href="tel:+380672758540">067 275 85 40</a>
+                            <a class="contacts__hotel-phone color-adress--desktop" href="tel:+380672758540">067 275 85
+                                40</a>
                         </div>
                     </li>
-                    <li class="contacts__map"> <a class="contacts__phone contacts__phone--map"
+                    <li class="contacts__map"> <a class="contacts__phone contacts__phone--map color-adress--desktop"
                             href="https://goo.gl/maps/qNzq3UbGuZtEH87W6" target="_blank"
                             rel="noopener noreferrer nofollow"><svg class="contacts__icon" width="12" height="20">
                                 <use href="./images/sprite.svg#icon-geo-marker12"></use>
