--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -5,6 +5,9 @@
     padding-top: 56px;
     padding-bottom: 40px;
 }
+@include desktop{
+    padding-bottom: 73px;
+}
 }
 
 .contacts__container{
@@ -22,6 +25,9 @@
     @include tablet{
        margin-bottom: 8px;
     } 
+@include desktop{
+                margin-bottom: 16px;
+}
 }
 
 .contacts__text {
@@ -31,6 +37,10 @@
     @include tablet{
        margin-bottom: 52px;
     } 
+    @include desktop{
+        margin-bottom: 40px;
+@include font(600, 20px, 1.2, 0.02em);
+        }
     }
 
 .contacts__item {
@@ -56,7 +66,7 @@
         display: block;
       margin-bottom: 8px;
     } 
-}
+    }
 
 .contacts__phone {
     @include font(400, 14px, 1.2, 0.02em);
@@ -68,6 +78,7 @@
     width: 144px;
     height: 40px;
     padding-left: 14px;
+    
 }
 .contacts__phone--twin{
     @include mobile {
@@ -101,6 +112,7 @@ display: none;
     display: flex;
     align-items: center
     }
+    
 }
 .contacts__phone--first {
  @include mobile {   
@@ -173,3 +185,9 @@ width: 535px;
 width: 634px;
 }
 }
+.color-adress--desktop {
+@include desktop{
+   color: $colorTextAddressDesktop;
+        }
+}
+
