--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -1,14 +1,14 @@
-<section class="about-our-kitchen">
+<section class="about-our-kitchen container">
   <h2 class="is-hidden">About our kitchen</h2>
-  <h4>Amet minim mollit non</h4>
-  <h3>Mimino</h3>
-  <div>
-    <p>
+  <p class="about-kitchen__title">Amet minim mollit non</p>
+  <span class="about-kitchen__logo">MIMIHO</span>
+  <div class="kitchen-card">
+    <p class="kitchen-card__description kitchen-card__description--gray">
       Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
       Velit officia consequat duis enim velit mollit. Exercitation veniam
       consequat sunt nostrud amet.
     </p>
-    <picture>
+    <picture class="kitchen-card__photo kitchen-card__photo--top">
       <source
         srcset="
           ./images/restaurant/restaurant-1-desk.jpg    1x,
@@ -31,7 +31,6 @@
         media="(min-width: 414px)"
       />
       <img
-        class=""
         src="./images/restaurant/restaurant-1-mob.jpg"
         alt="повар готує на кухні"
         width="244"
@@ -39,8 +38,8 @@
       />
     </picture>
   </div>
-  <div>
-    <picture>
+  <div class="kitchen-card">
+    <picture class="kitchen-card__photo kitchen-card__photo--bottom">
       <source
         srcset="
           ./images/restaurant/restaurant-2-desk.jpg    1x,
@@ -63,22 +62,21 @@
         media="(min-width: 414px)"
       />
       <img
-        class=""
         src="./images/restaurant/restaurant-2-mob.jpg"
         alt="м'ясо на дошці для нарізання"
         width="200"
         height="278"
       />
     </picture>
-    <p>
+    <p class="kitchen-card__description kitchen-card__description--orange">
       Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
       Velit officia consequat duis enim velit mollit. Exercitation veniam
       consequat sunt nostrud amet.
     </p>
   </div>
 
-  <div>
-    <div>
+  <div class="autoplay">
+    <div class="autoplay__thumb">
       <picture>
         <source
           srcset="
@@ -102,7 +100,7 @@
           media="(min-width: 414px)"
         />
         <img
-          class=""
+          class="autoplay__photo"
           src="./images/restaurant/restaurant-3-mob.jpg"
           alt="людина смикає з рук борошно"
           width="245"
@@ -110,7 +108,7 @@
         />
       </picture>
     </div>
-    <div>
+    <div class="autoplay__thumb">
       <picture>
         <source
           srcset="
@@ -134,7 +132,7 @@
           media="(min-width: 414px)"
         />
         <img
-          class=""
+          class="autoplay__photo"
           src="./images/restaurant/restaurant-1-mob.jpg"
           alt="хінкалі на тарілці"
           width="245"
@@ -142,7 +140,7 @@
         />
       </picture>
     </div>
-    <div>
+    <div class="autoplay__thumb">
       <picture>
         <source
           srcset="
@@ -166,7 +164,7 @@
           media="(min-width: 414px)"
         />
         <img
-          class=""
+          class="autoplay__photo"
           src="./images/sliders/slider-6-mob.jpg"
           alt="наливають чай у чашку"
           width="245"
@@ -174,7 +172,7 @@
         />
       </picture>
     </div>
-    <div>
+    <div class="autoplay__thumb">
       <picture>
         <source
           srcset="
@@ -198,7 +196,7 @@
           media="(min-width: 414px)"
         />
         <img
-          class=""
+          class="autoplay__photo"
           src="./images/sliders/slider-7-mob.jpg"
           alt="устриці та шампанське"
           width="245"
@@ -206,7 +204,7 @@
         />
       </picture>
     </div>
-    <div>
+    <div class="autoplay__thumb">
       <picture>
         <source
           srcset="
@@ -230,7 +228,7 @@
           media="(min-width: 414px)"
         />
         <img
-          class=""
+          class="autoplay__photo"
           src="./images/sliders/slider-9-mob.jpg"
           alt="гарно сервірований стіл на вулиці"
           width="245"
@@ -238,7 +236,7 @@
         />
       </picture>
     </div>
-    <div>
+    <div class="autoplay__thumb">
       <picture>
         <source
           srcset="
@@ -262,7 +260,7 @@
           media="(min-width: 414px)"
         />
         <img
-          class=""
+          class="autoplay__photo"
           src="./images/sliders/slider-15-mob.jpg"
           alt="гарно сервірований стіл у приміщенні"
           width="245"
@@ -270,7 +268,7 @@
         />
       </picture>
     </div>
-    <div>
+    <div class="autoplay__thumb">
       <picture>
         <source
           srcset="
@@ -294,7 +292,7 @@
           media="(min-width: 414px)"
         />
         <img
-          class=""
+          class="autoplay__photo"
           src="./images/sliders/slider-16-mob.jpg"
           alt="сніданок у ліжко"
           width="245"
