format with prettier

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,41 +1,62 @@
 <section class="contacts section--light">
-    <div class="container contacts__container">
-        <h2 class="contacts__title visually-hidden">Наші контакти</h2>
-        <div class="contacts__wraper">
-            <span class="logo contacts__logo color-adress--desktop" href="./">MIMIHO</span>
-            <p class="contacts__text">Ресторанно-готельний комплекс</p>
-            <address class="contacts__address">
-                <ul class="contacts__list">
-                    <li class="contacts__item">
-                        <a class="contacts__link" href="./restaurant.html">Ресторан</a><a
-                            class="contacts__phone color-adress--desktop" href="tel:+380955559533"><svg
-                                class="phone__icon" width="12" height="20">
-                                <use href="./images/sprite.svg#icon-phone"></use>
-                            </svg>095 555 95 33</a>
-                    </li>
-                    <li class="contacts__item contacts__item--hotel">
-                        <a class="contacts__link" href="./hotel.html">Готель</a>
-                        <div class="contacts__phone contacts__phone--twin">
-                            <a class="contacts__hotel-phone contacts__phone--first color-adress--desktop"
-                                href="tel:+380668491089"><svg class="phone__icon" width="12" height="20">
-                                    <use href="./images/sprite.svg#icon-phone"></use>
-                                </svg>066 849 10 89</a>
-                            <a class="contacts__hotel-phone color-adress--desktop" href="tel:+380672758540">067 275 85
-                                40</a>
-                        </div>
-                    </li>
-                    <li class="contacts__map"> <a class="contacts__phone contacts__phone--map color-adress--desktop"
-                            href="https://goo.gl/maps/qNzq3UbGuZtEH87W6" target="_blank"
-                            rel="noopener noreferrer nofollow"><svg class="contacts__icon" width="12" height="20">
-                                <use href="./images/sprite.svg#icon-geo-marker12"></use>
-                            </svg><span class="map__text">Україна, м. Полтава, вул. Маршала Бірюзова, 15</span></a>
-                    </li>
-                </ul>
-            </address>
-        </div>
-        <iframe class="contacts__googlemap"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113881.91630131582!2d34.48719366657029!3d49.601959930067196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d825e425e6ba6b%3A0xcf3e6bdfb9e4ca82!2sPoltava%2C%20Poltava%20Oblast%2C%2036000!5e1!3m2!1sen!2sua!4v1670619352258!5m2!1sen!2sua"
-            style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
+  <div class="container contacts__container">
+    <h2 class="contacts__title visually-hidden">Наші контакти</h2>
+    <div class="contacts__wraper">
+      <span class="logo contacts__logo color-adress--desktop">MIMIHO</span>
+      <p class="contacts__text">Ресторанно-готельний комплекс</p>
+      <address class="contacts__address">
+        <ul class="contacts__list">
+          <li class="contacts__item">
+            <a class="contacts__link" href="./restaurant.html">Ресторан</a
+            ><a
+              class="contacts__phone color-adress--desktop"
+              href="tel:+380955559533"
+              ><svg class="phone__icon" width="12" height="20">
+                <use href="./images/sprite.svg#icon-phone"></use></svg
+              >095 555 95 33</a
+            >
+          </li>
+          <li class="contacts__item contacts__item--hotel">
+            <a class="contacts__link" href="./hotel.html">Готель</a>
+            <div class="contacts__phone contacts__phone--twin">
+              <a
+                class="contacts__hotel-phone contacts__phone--first color-adress--desktop"
+                href="tel:+380668491089"
+                ><svg class="phone__icon" width="12" height="20">
+                  <use href="./images/sprite.svg#icon-phone"></use></svg
+                >066 849 10 89</a
+              >
+              <a
+                class="contacts__hotel-phone color-adress--desktop"
+                href="tel:+380672758540"
+                >067 275 85 40</a
+              >
+            </div>
+          </li>
+          <li class="contacts__map">
+            <a
+              class="contacts__phone contacts__phone--map color-adress--desktop"
+              href="https://goo.gl/maps/qNzq3UbGuZtEH87W6"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              ><svg class="contacts__icon" width="12" height="20">
+                <use href="./images/sprite.svg#icon-geo-marker12"></use></svg
+              ><span class="map__text"
+                >Україна, м. Полтава, вул. Маршала Бірюзова, 15</span
+              ></a
+            >
+          </li>
+        </ul>
+      </address>
     </div>
+    <iframe
+      class="contacts__googlemap"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113881.91630131582!2d34.48719366657029!3d49.601959930067196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d825e425e6ba6b%3A0xcf3e6bdfb9e4ca82!2sPoltava%2C%20Poltava%20Oblast%2C%2036000!5e1!3m2!1sen!2sua!4v1670619352258!5m2!1sen!2sua"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    >
+    </iframe>
+  </div>
 </section>
