--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -7,7 +7,7 @@
       <address class="contacts__address">
         <ul class="contacts__list">
           <li class="contacts__item">
-            <a class="contacts__link" href="./restaurant.html">Ресторан</a
+            <span class="contacts__name">Ресторан</span
             ><a
               class="contacts__phone color-adress--desktop"
               href="tel:+380955559533"
@@ -17,7 +17,7 @@
             >
           </li>
           <li class="contacts__item contacts__item--hotel">
-            <a class="contacts__link" href="./hotel.html">Готель</a>
+            <span class="contacts__name">Готель</span>
             <div class="contacts__phone contacts__phone--twin">
               <a
                 class="contacts__hotel-phone contacts__phone--first color-adress--desktop"
@@ -36,7 +36,7 @@
           <li class="contacts__map">
             <a
               class="contacts__phone contacts__phone--map color-adress--desktop"
-              href="https://goo.gl/maps/qNzq3UbGuZtEH87W6"
+              href="https://goo.gl/maps/bBwFzgiCFPFPAu5Y6"
               target="_blank"
               rel="noopener noreferrer nofollow"
               ><svg class="contacts__icon" width="12" height="20">
@@ -49,14 +49,13 @@
         </ul>
       </address>
     </div>
+
     <iframe
       class="contacts__googlemap"
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113881.91630131582!2d34.48719366657029!3d49.601959930067196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d825e425e6ba6b%3A0xcf3e6bdfb9e4ca82!2sPoltava%2C%20Poltava%20Oblast%2C%2036000!5e1!3m2!1sen!2sua!4v1670619352258!5m2!1sen!2sua"
-      style="border: 0"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3559.0116541201005!2d34.5265463!3d49.59919399999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d82601f34ac947%3A0xbb948724f7cf0b61!2sMimino%20Restaurant%20and%20Hotel%20Complex!5e1!3m2!1sen!2sua!4v1670759200576!5m2!1sen!2sua"
       allowfullscreen=""
       loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"
-    >
-    </iframe>
+    ></iframe>
   </div>
 </section>
