--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -21,8 +21,8 @@
   color: $colorLogoGray;
   margin-bottom: 12px;
   display: block;
-  @include font(700, 64px, 1.08, 0.03em);
   @include tablet {
+    @include font(700, 64px, 1.08, 0.3em);
     margin-bottom: 8px;
   }
   @include desktop {
@@ -59,7 +59,7 @@
   }
 }
 
-.contacts__link {
+.contacts__name {
   @include font(500, 20px, 1.2, 0.02em);
   color: $colorBrown;
   @include tablet {
@@ -166,6 +166,9 @@
 .contacts__googlemap {
   width: 290px;
   height: 220px;
+  border: 1px solid $colorTextHotel;
+  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
   @include mobilemax {
     display: block;
     margin: 0 auto;
@@ -176,6 +179,7 @@
   @include tablet {
     width: 535px;
     height: 412px;
+    box-shadow: 5px 5px 70px 17px rgba(0, 0, 0, 0.25);
   }
   @include desktop {
     width: 634px;
