--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -178,9 +178,11 @@
     width: 535px;
     height: 412px;
     box-shadow: 5px 5px 70px 17px rgba(0, 0, 0, 0.25);
+    margin-top: 13px;
   }
   @include desktop {
     width: 634px;
+    margin-top: 8px;
   }
 }
 .color-adress--desktop {
