add input and button

--- a/src/partials/modal-price.html
+++ b/src/partials/modal-price.html
@@ -1,6 +1,6 @@
 <div class="backdrop" data-modal>
   <!-- is-hidden -->
-  <div class="modal-price is-hidden">
+  <div class="modal-price">
       <button type="button" class="modal-price__close" data-modal-close>
       <svg class="modal-price__close-icon" width="24" height="24">
           <use href="./images/sprite.svg#icon-close"></use>
@@ -12,20 +12,42 @@
       
       <form class="modal-price__form">
         <p class="modal-price__text">Категорія номеру</p>
-        <div class="modal-price__user-name modal-price__input-wrapper">
-          <input
-            type="number"
-            id="number-category"
-            name="number-category"
-            class="modal-price__input"
-            minlength="2"
-            placeholder="1"
-            required
-          />
-          <select name="number-category" id="number-category"> class="modal-price__select"</select>
+        <div class="wrapper-input">
+          <div class="modal-price__user-name modal-price__input-wrapper">
+            <input
+              type="number"
+              id="number-cast"
+              name="number-cast"
+              class="modal-price__input"
+              minlength="2"
+              placeholder="1"
+              required
+            />
+            <select name="number-cast" class="modal-price__select"></select>
 
+          </div>
+          <label for="number-cast" class="modal-price__label">Кількість ночей</label>
         </div>
-        <label for="number-category" class="modal-price__label">Кількість ночей</label>
+
+        <div class="wrapper-input wrapper-last">
+          <div class="modal-price__user-name modal-price__input-wrapper">
+            <input
+              type="number"
+              id="number-cost"
+              name="number-cost"
+              class="modal-price__input"
+              minlength="2"
+              placeholder="1"
+              required
+            />
+            <select name="number-cost" class="modal-price__select"></select>
+
+          </div>
+          <label for="number-cost" class="modal-price__label">грн</label>
+        </div>
+
+        
+        <button type="submit" class="modal__btn">Відправити</button>
       </form>
   </div>
 </div>
