--- a/src/partials/pages/restaurant/menu.html
+++ b/src/partials/pages/restaurant/menu.html
@@ -231,7 +231,9 @@
     </table>
 
     <div class="menu__wrap">
-      <button class="menu__button btn" type="button">Забронювати столик</button>
+      <button class="menu__button btn" type="button" data-modal-open>
+        Забронювати столик
+      </button>
     </div>
   </div>
 </section>
