fix elements size and distance

--- a/src/partials/pages/restaurant/menu.html
+++ b/src/partials/pages/restaurant/menu.html
@@ -169,21 +169,21 @@
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Торт наполеон</p>
+            <p class="menu__meal menu__meal--short">Торт наполеон</p>
           </td>
           <td class="menu__weight">230 г</td>
           <td class="menu__price">300 грн</td>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Торт маковий</p>
+            <p class="menu__meal menu__meal--short">Торт маковий</p>
           </td>
           <td class="menu__weight">230 г</td>
           <td class="menu__price">300 грн</td>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Тірамісу</p>
+            <p class="menu__meal menu__meal--short">Тірамісу</p>
           </td>
           <td class="menu__weight">120 г</td>
           <td class="menu__price">260 грн</td>
@@ -194,35 +194,35 @@
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Чай чорний/зелений</p>
+            <p class="menu__meal menu__meal--short">Чай чорний/зелений</p>
           </td>
           <td class="menu__weight">500 г</td>
           <td class="menu__price">100 грн</td>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Еспресо</p>
+            <p class="menu__meal menu__meal--short">Еспресо</p>
           </td>
           <td class="menu__weight">30 г</td>
           <td class="menu__price">100 грн</td>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Американо</p>
+            <p class="menu__meal menu__meal--short">Американо</p>
           </td>
           <td class="menu__weight">150 г</td>
           <td class="menu__price">100 грн</td>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Капучино</p>
+            <p class="menu__meal menu__meal--short">Капучино</p>
           </td>
           <td class="menu__weight">200 г</td>
           <td class="menu__price">160 грн</td>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Лате</p>
+            <p class="menu__meal menu__meal--short">Лате</p>
           </td>
           <td class="menu__weight">200 г</td>
           <td class="menu__price">160 грн</td>
