--- a/src/sass/pages/restaurant/_menu.scss
+++ b/src/sass/pages/restaurant/_menu.scss
@@ -18,10 +18,9 @@
 
   @include tablet {
     flex-direction: row;
-    column-gap: 14px;
 
-    margin: -8px -37px 32px;
-    border-spacing: 37px 8px;
+    margin: -8px -44px 32px;
+    border-spacing: 44px 8px;
   }
 
   @include desktop {
@@ -78,9 +77,16 @@
 }
 
 .menu__meal {
+  margin-right: -3px;
+  margin-bottom: 4px;
+
   font-weight: 500;
   font-size: 14px;
   line-height: calc(17 / 14);
+
+  &--short {
+    margin-bottom: 3px;
+  }
 
   @include desktop {
     font-size: 16px;
@@ -89,11 +95,13 @@
 }
 
 .menu__ingredients {
-  margin-top: 5px;
-
   font-weight: 400;
   font-size: 10px;
   line-height: calc(12 / 10);
+
+  @include tablet {
+    margin-right: 4px;
+  }
 }
 
 .menu__weight {
