--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -1,8 +1,8 @@
 <section class="about-our-kitchen container">
-  <h2 class="is-hidden">About our kitchen</h2>
+  <h2 class="visually-hidden">About our kitchen</h2>
   <p class="about-kitchen__title">Amet minim mollit non</p>
   <span class="about-kitchen__logo">MIMIHO</span>
-  <div class="kitchen-card">
+  <div class="kitchen-card kitchen-card--top">
     <p class="kitchen-card__description kitchen-card__description--gray">
       Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
       Velit officia consequat duis enim velit mollit. Exercitation veniam
@@ -14,14 +14,14 @@
           ./images/restaurant/restaurant-1-desk.jpg    1x,
           ./images/restaurant/restaurant-1-desk-2x.jpg 2x
         "
-        media="(min-width: 1200px)"
+        media="(min-width: 1280px)"
       />
       <source
         srcset="
           ./images/restaurant/restaurant-1-tab.jpg    1x,
           ./images/restaurant/restaurant-1-tab-2x.jpg 2x
         "
-        media="(min-width: 768px)"
+        media="(min-width: 1024px)"
       />
       <source
         srcset="
@@ -33,26 +33,24 @@
       <img
         src="./images/restaurant/restaurant-1-mob.jpg"
         alt="повар готує на кухні"
-        width="244"
-        height="322"
       />
     </picture>
   </div>
-  <div class="kitchen-card">
+  <div class="kitchen-card kitchen-card--bottom">
     <picture class="kitchen-card__photo kitchen-card__photo--bottom">
       <source
         srcset="
           ./images/restaurant/restaurant-2-desk.jpg    1x,
           ./images/restaurant/restaurant-2-desk-2x.jpg 2x
         "
-        media="(min-width: 1200px)"
+        media="(min-width: 1280px)"
       />
       <source
         srcset="
           ./images/restaurant/restaurant-2-tab.jpg    1x,
           ./images/restaurant/restaurant-2-tab-2x.jpg 2x
         "
-        media="(min-width: 768px)"
+        media="(min-width: 1024px)"
       />
       <source
         srcset="
@@ -64,8 +62,6 @@
       <img
         src="./images/restaurant/restaurant-2-mob.jpg"
         alt="м'ясо на дошці для нарізання"
-        width="200"
-        height="278"
       />
     </picture>
     <p class="kitchen-card__description kitchen-card__description--orange">
@@ -80,81 +76,17 @@
       <picture>
         <source
           srcset="
-            ./images/restaurant/restaurant-3-desk.jpg    1x,
-            ./images/restaurant/restaurant-3-desk-2x.jpg 2x
-          "
-          media="(min-width: 1200px)"
-        />
-        <source
-          srcset="
-            ./images/restaurant/restaurant-3-tab.jpg    1x,
-            ./images/restaurant/restaurant-3-tab-2x.jpg 2x
-          "
-          media="(min-width: 768px)"
-        />
-        <source
-          srcset="
-            ./images/restaurant/restaurant-3-mob.jpg    1x,
-            ./images/restaurant/restaurant-3-mob-2x.jpg 2x
-          "
-          media="(min-width: 414px)"
-        />
-        <img
-          class="autoplay__photo"
-          src="./images/restaurant/restaurant-3-mob.jpg"
-          alt="людина смикає з рук борошно"
-          width="245"
-          height="245"
-        />
-      </picture>
-    </div>
-    <div class="autoplay__thumb">
-      <picture>
-        <source
-          srcset="
-            ./images/restaurant/restaurant-4-desk.jpg    1x,
-            ./images/restaurant/restaurant-4-desk-2x.jpg 2x
-          "
-          media="(min-width: 1200px)"
-        />
-        <source
-          srcset="
-            ./images/restaurant/restaurant-4-tab.jpg    1x,
-            ./images/restaurant/restaurant-4-tab-2x.jpg 2x
-          "
-          media="(min-width: 768px)"
-        />
-        <source
-          srcset="
-            ./images/restaurant/restaurant-1-mob.jpg    1x,
-            ./images/restaurant/restaurant-2-mob-2x.jpg 2x
-          "
-          media="(min-width: 414px)"
-        />
-        <img
-          class="autoplay__photo"
-          src="./images/restaurant/restaurant-1-mob.jpg"
-          alt="хінкалі на тарілці"
-          width="245"
-          height="245"
-        />
-      </picture>
-    </div>
-    <div class="autoplay__thumb">
-      <picture>
-        <source
-          srcset="
             ./images/sliders/slider-6-desk.jpg 1x,
             ./images/sliders/slider-6-desk.jpg 2x
           "
-          media="(min-width: 1200px)"
+          media="(min-width: 1280px)"
         />
         <source
           srcset="
             ./images/sliders/slider-6-tab.jpg 1x,
             ./images/sliders/slider-6-tab.jpg 2x
           "
-          media="(min-width: 768px)"
+          media="(min-width: 1024px)"
         />
         <source
           srcset="
@@ -167,8 +99,6 @@
           class="autoplay__photo"
           src="./images/sliders/slider-6-mob.jpg"
           alt="наливають чай у чашку"
-          width="245"
-          height="245"
         />
       </picture>
     </div>
@@ -179,14 +109,14 @@
             ./images/sliders/slider-7-desk.jpg 1x,
             ./images/sliders/slider-7-desk.jpg 2x
           "
-          media="(min-width: 1200px)"
+          media="(min-width: 1280px)"
         />
         <source
           srcset="
             ./images/sliders/slider-7-tab.jpg 1x,
             ./images/sliders/slider-7-tab.jpg 2x
           "
-          media="(min-width: 768px)"
+          media="(min-width: 1024px)"
         />
         <source
           srcset="
@@ -199,8 +129,6 @@
           class="autoplay__photo"
           src="./images/sliders/slider-7-mob.jpg"
           alt="устриці та шампанське"
-          width="245"
-          height="245"
         />
       </picture>
     </div>
@@ -211,14 +139,14 @@
             ./images/sliders/slider-9-desk.jpg 1x,
             ./images/sliders/slider-9-desk.jpg 2x
           "
-          media="(min-width: 1200px)"
+          media="(min-width: 1280px)"
         />
         <source
           srcset="
             ./images/sliders/slider-9-tab.jpg 1x,
             ./images/sliders/slider-9-tab.jpg 2x
           "
-          media="(min-width: 768px)"
+          media="(min-width: 1024px)"
         />
         <source
           srcset="
@@ -231,8 +159,6 @@
           class="autoplay__photo"
           src="./images/sliders/slider-9-mob.jpg"
           alt="гарно сервірований стіл на вулиці"
-          width="245"
-          height="245"
         />
       </picture>
     </div>
@@ -243,14 +169,14 @@
             ./images/sliders/slider-15-desk.jpg 1x,
             ./images/sliders/slider-15-desk.jpg 2x
           "
-          media="(min-width: 1200px)"
+          media="(min-width: 1280px)"
         />
         <source
           srcset="
             ./images/sliders/slider-15-tab.jpg 1x,
             ./images/sliders/slider-15-tab.jpg 2x
           "
-          media="(min-width: 768px)"
+          media="(min-width: 1024px)"
         />
         <source
           srcset="
@@ -263,8 +189,6 @@
           class="autoplay__photo"
           src="./images/sliders/slider-15-mob.jpg"
           alt="гарно сервірований стіл у приміщенні"
-          width="245"
-          height="245"
         />
       </picture>
     </div>
@@ -275,14 +199,14 @@
             ./images/sliders/slider-16-desk.jpg 1x,
             ./images/sliders/slider-16-desk.jpg 2x
           "
-          media="(min-width: 1200px)"
+          media="(min-width: 1280px)"
         />
         <source
           srcset="
             ./images/sliders/slider-16-tab.jpg 1x,
             ./images/sliders/slider-16-tab.jpg 2x
           "
-          media="(min-width: 768px)"
+          media="(min-width: 1024px)"
         />
         <source
           srcset="
@@ -295,8 +219,6 @@
           class="autoplay__photo"
           src="./images/sliders/slider-16-mob.jpg"
           alt="сніданок у ліжко"
-          width="245"
-          height="245"
         />
       </picture>
     </div>
