--- a/src/partials/pages/room-luxe/amenities.html
+++ b/src/partials/pages/room-luxe/amenities.html
@@ -83,7 +83,7 @@
     <a href="#" class="link__amenities"
       >Повернутися до перегляду номерів
       <svg width="24" height="24" class="amenities__icon">
-        <use href="/mi-6/sprite.a3fd5f86.svg#icon-cil_arrow-right32"></use>
+        <use href="/src/images/sprite.svg#icon-cil_arrow-right32"></use>
       </svg>
     </a>
   </div>
